# Customer-Journey-Funnel-Tracker

./: .env.example  .gitignore  About_Company.md  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
docs/forensics/: check_file_pruning_evidence.md  partition_evolution_evidence.md  pruning.md  pruning_evidence.md
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: Chat.tsx  ProvenanceCard.tsx
powerbi/: theme.json
sql/: metrics.sql  views.sql
src/agent/: lakehouse.py  mcp_client.py  mcp_server.py  metrics.py  prompts.py  server.py  tools.py
src/data_generation/: dim_date.py  generate_data.py  generate_new_batch.py  schemas.py
src/elt/: evolve_partition.py  generate_new_batch.py  load_iceberg.py  serve_postgres.py
src/validation/: check_evolution_immutability.py  check_file_pruning.py  check_partition_layout.sh  check_partition_pruning.py  run_metrics.py
tests/: test_metrics.py
